--- a/Spotify_To_GPM/spotify_to_gpm_site/spotify_to_gpm_app/templates/spotify_to_gpm_app/spotify_login.html
+++ b/Spotify_To_GPM/spotify_to_gpm_site/spotify_to_gpm_app/templates/spotify_to_gpm_app/spotify_login.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div>
-    <h1>Login To GPM</h1>
-    {{ form }}
+    <h1>Login To Spotify</h1>
+    <a href="{% url 'spotify_to_gpm_app:spotify_login' %}">Login To Spotify</a>
 </div>
 
 </body>
