--- a/Spotify_To_GPM/spotify_to_gpm_site/spotify_to_gpm_app/templates/spotify_to_gpm_app/homepage.html
+++ b/Spotify_To_GPM/spotify_to_gpm_site/spotify_to_gpm_app/templates/spotify_to_gpm_app/homepage.html
@@ -8,8 +8,10 @@
     <h3>Logged into Spotify as {{ user.username }}</h3>
     <h3>Logged into GPM as {{ user.GPMUser.email }}</h3>
     <p> <a href="{% url 'spotify_to_gpm_app:logout_both' %}">Logout Of Spotify and GPM</a> </p>
-    <p> <a href="{% url 'spotify_to_gpm_app:spotify_lib_to_gpm' %}">Import Spotify Library To GPM</a> </p>
-    {{ done }}
+    <p> <a href="{% url 'spotify_to_gpm_app:spotify_lib_to_db' %}">Import Spotify To Database</a> </p>
+    <p> <a href="{% url 'spotify_to_gpm_app:gpm_lib_to_db' %}">Import GPM To Database</a> </p>
+    {{ spotify_done }}
+    {{ gpm_done }}
 
     {% comment %}
     <h3>Your Playlists</h3>
