--- a/Spotify_To_GPM/spotify_to_gpm_site/spotify_to_gpm_app/templates/spotify_to_gpm_app/index.html
+++ b/Spotify_To_GPM/spotify_to_gpm_site/spotify_to_gpm_app/templates/spotify_to_gpm_app/index.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     <h1>Spotify To GPM</h1>
-    <h2>Please sign into Spotify first, then into Google Play Music</h2>
+    <p>Please sign into Spotify first, then into Google Play Music</p>
     <a href="{% url 'spotify_to_gpm_app:spotify_login' %}">Login To Spotify</a>
 
     {% comment %}
