--- a/Spotify_To_GPM/spotify_to_gpm_site/spotify_to_gpm_app/templates/spotify_to_gpm_app/homepage.html
+++ b/Spotify_To_GPM/spotify_to_gpm_site/spotify_to_gpm_app/templates/spotify_to_gpm_app/homepage.html
@@ -4,9 +4,17 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css"
-          href="{% static 'spotify_to_gpm_app/css/style.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'spotify_to_gpm_app/css/style.css' %}?{% now "U" %}">
+    <script
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+    <script
+            src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+            integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="overall_wrapper">
@@ -14,23 +22,24 @@
         <h1>Welcome to Spotify To GPM!!!</h1>
         {#    <p> <a href="{% url 'spotify_to_gpm_app:spotify_lib_to_db' %}">Import Spotify To Database</a> </p>#}
         {#    <p> <a href="{% url 'spotify_to_gpm_app:gpm_lib_to_db' %}">Import GPM To Database</a> </p>#}
-{#        <p><a href="{% url 'spotify_to_gpm_app:import_songs_to_db' %}">Import#}
-{#            Spotify and GPM Songs</a></p>#}
+        {#        <p><a href="{% url 'spotify_to_gpm_app:import_songs_to_db' %}">Import#}
+        {#            Spotify and GPM Songs</a></p>#}
 
 
         <p><a href="{% url 'spotify_to_gpm_app:import_songs_to_db' %}">Import
-            songs to db!</a></p>
+            Songs!</a></p>
     </header>
 
     <main class="songs_tables_wrapper">
         <div class="spotify_table">
             <header class="spotify_header">
                 <h2>Logged into Spotify as {{ user.username }}</h2>
+                <p><a href="{% url 'spotify_to_gpm_app:spotify_to_gpm' %}">Import All Songs To GPM</a></p>
                 <p><a href="{% url 'spotify_to_gpm_app:spotify_logout' %}">Logout
                     Of Spotify</a></p>
             </header>
-            <div class="spotify_tracks">
-                <table>
+            <div class="spotify_song_list">
+                <table id="spotify_selectable">
                     <thead>
                     <tr>
                         <th>Title</th>
@@ -40,10 +49,10 @@
                     </thead>
                     <tbody>
                     {% for track in spotify_tracks %}
-                        <tr>
-                            <td>{{ track.track_name }}</td>
-                            <td>{{ track.artist_name }}</td>
-                            <td>{{ track.album_name }}</td>
+                        <tr onmousedown="RowClick(this,false);" class="spotify_song">
+                            <td class="spotify_name">{{ track.track_name }}</td>
+                            <td class="spotify_artist">{{ track.artist_name }}</td>
+                            <td class="spotify_album">{{ track.album_name }}</td>
                         </tr>
                     {% endfor %}
                     </tbody>
@@ -52,19 +61,21 @@
         </div>
 
         <div class="buttons">
-            <a href="{% url 'spotify_to_gpm_app:spotify_to_gpm' %}">→</a>
-
-            <a href="{% url 'spotify_to_gpm_app:gpm_to_spotify' %}">←</a>
+            <a class="spotify_to_gpm" href="{% url 'spotify_to_gpm_app:spotify_to_gpm' %}">→</a>
+            <a class="gpm_to_spotify">←</a>
+{#            <a href="{% url 'spotify_to_gpm_app:spotify_to_gpm' %}">→</a>#}
+{#            <a href="{% url 'spotify_to_gpm_app:gpm_to_spotify' %}">←</a>#}
         </div>
 
         <div class="gpm_table">
             <header class="gpm_header">
                 <h2>Logged into GPM as {{ user.GPMUser.email }}</h2>
+                <p><a href="{% url 'spotify_to_gpm_app:gpm_to_spotify' %}">Import All Songs To Spotify</a></p>
                 <p><a href="{% url 'spotify_to_gpm_app:gpm_logout' %}">Logout Of
                     GPM</a></p>
             </header>
-            <div class="gpm_tracks">
-                <table>
+            <div class="gpm_song_list">
+                <table id="gpm_selectable">
                     <thead>
                     <tr>
                         <th>Title</th>
@@ -74,7 +85,7 @@
                     </thead>
                     <tbody>
                     {% for track in gpm_tracks %}
-                        <tr>
+                        <tr id="{{ track.store_id }}" class="gpm_song">
                             <td>{{ track.track_name }}</td>
                             <td>{{ track.artist_name }}</td>
                             <td>{{ track.album_name }}</td>
@@ -86,43 +97,50 @@
         </div>
     </main>
 
-{#← #}
+    {% if spotify_tracks_added %}
+        <h3>The following {{ spotify_tracks_added|length }} songs were added to
+            your Spotify Library:</h3>
+        <ul>
+            {% for track in spotify_tracks_added %}
+                <li>{{ track.track_name }} *** {{ track.artist_name }}
+                    *** {{ track.album_name }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
-    {#    {% if spotify_tracks_added %}#}
-    {#        <h3>The following {{ spotify_tracks_added|length }} songs were added to your Spotify Library:</h3>#}
-    {#        <ul>#}
-    {#            {% for track in spotify_tracks_added %}#}
-    {#                <li>{{ track.track_name }} *** {{ track.artist_name }} *** {{ track.album_name }}</li>#}
-    {#            {% endfor %}#}
-    {#        </ul>#}
-    {#    {% endif %}#}
-    {##}
-    {#    {% if spotify_tracks_not_added %}#}
-    {#        <h3>The following {{ spotify_tracks_not_added|length }} songs could not be added to your Spotify Library:</h3>#}
-    {#        <ul>#}
-    {#            {% for track in spotify_tracks_not_added %}#}
-    {#                <li>{{ track.track_name }} *** {{ track.artist_name }} *** {{ track.album_name }}</li>#}
-    {#            {% endfor %}#}
-    {#        </ul>#}
-    {#    {% endif %}#}
-    {##}
-    {#    {% if gpm_tracks_added %}#}
-    {#        <h3>The following {{ gpm_tracks_added|length }} songs were added to your GPM Library:</h3>#}
-    {#        <ul>#}
-    {#            {% for track in gpm_tracks_added %}#}
-    {#                <li>{{ track.track_name }} *** {{ track.artist_name }} *** {{ track.album_name }}</li>#}
-    {#            {% endfor %}#}
-    {#        </ul>#}
-    {#    {% endif %}#}
-    {##}
-    {#    {% if gpm_tracks_not_added %}#}
-    {#        <h3>The following {{ gpm_tracks_not_added|length }} songs could not be added to your GPM Library:</h3>#}
-    {#        <ul>#}
-    {#            {% for track in gpm_tracks_not_added %}#}
-    {#                <li>{{ track.track_name }} *** {{ track.artist_name }} *** {{ track.album_name }}</li>#}
-    {#            {% endfor %}#}
-    {#        </ul>#}
-    {#    {% endif %}#}
+    {% if spotify_tracks_not_added %}
+        <h3>The following {{ spotify_tracks_not_added|length }} songs could not
+            be added to your Spotify Library:</h3>
+        <ul>
+            {% for track in spotify_tracks_not_added %}
+                <li>{{ track.track_name }} *** {{ track.artist_name }}
+                    *** {{ track.album_name }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
+    {% if gpm_tracks_added %}
+        <h3>The following {{ gpm_tracks_added|length }} songs were added to your
+            GPM Library:</h3>
+        <ul>
+            {% for track in gpm_tracks_added %}
+                <li>{{ track.track_name }} *** {{ track.artist_name }}
+                    *** {{ track.album_name }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
+    {% if gpm_tracks_not_added %}
+        <h3>The following {{ gpm_tracks_not_added|length }} songs could not be
+            added to your GPM Library:</h3>
+        <ul>
+            {% for track in gpm_tracks_not_added %}
+                <li>{{ track.track_name }} *** {{ track.artist_name }}
+                    *** {{ track.album_name }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 </div>
+<script src="{% static "spotify_to_gpm_app/js/app.js" %}?{% now "U" %}"></script>
 </body>
 </html>
